AG-10287 / CRT-200 - Fix Product dropdown clipping bug, add spacing to gallery themes dropdown, formatting

--- a/packages/ag-charts-website/src/design-system/modules/SiteHeader.module.scss
+++ b/packages/ag-charts-website/src/design-system/modules/SiteHeader.module.scss
@@ -5,7 +5,10 @@
     align-items: center;
     position: relative;
     background-color: var(--color-bg-site-header);
-    overflow-x: hidden;
+
+    @media screen and (max-width: $breakpoint-docs-nav-medium) {
+        overflow-x: hidden;
+    }
 
     @media screen and (min-width: $breakpoint-docs-nav-medium) {
         position: sticky;
